applications/openeuler-reproducible/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: openeuler-reproducible-ingress
  namespace: openeuler-reproducible
spec:
  tls:
    - hosts:
        - reproducible-builds.openeuler.org
      secretName: openeuler-org-tls
  rules:
    - host: reproducible-builds.openeuler.org
      http:
        paths:
          - backend:
              serviceName: website-service
              servicePort: 80
            path: /

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: openeuler-reproducible-server-ingress
  namespace: openeuler-reproducible
spec:
  tls:
    - hosts:
        - reproducible-builds.openeuler.org
      secretName: openeuler-org-tls
  rules:
    - host: reproducible-builds.openeuler.org
      http:
        paths:
          - backend:
              serviceName: backend-service
              servicePort: 80
            path: /api
